reports/PTP-113B.3.1A.5.1_IMPLEMENT_FAIL_syntax_error_20260706_175112.txt
PREDIXAI BR — PTP-113B.3.1A.5.1 — IMPLEMENT FAIL
Data: seg 06 jul 2026 17:51:12 -03
Repo: /home/leo/Documentos/GitHub/predixai-platform

===== ERRO IDENTIFICADO =====
SyntaxError no script de implementação.
Causa provável: conflito de aspas triplas dentro do bloco Python.
Resultado: patch não executado corretamente.

===== RELATÓRIO ORIGINAL DA FALHA =====
reports/PTP-113B.3.1A.5.1_IMPLEMENT_recovery_risk_20260706_174931.txt

  File "<stdin>", line 868
    new_select = '''<select name="recovery_mode" id="recovery_mode">
                            ^^^^
SyntaxError: invalid syntax

===== GIT STATUS =====
?? reports/PTP-113B.3.1A.5.1_IMPLEMENT_FAIL_syntax_error_20260706_175112.txt
?? reports/PTP-113B.3.1A.5.1_IMPLEMENT_recovery_risk_20260706_174931.txt

===== ÚLTIMOS COMMITS =====
b44ea6f PTP-113B.3.1A.5.1 AUDIT clean close report
cccf827 PTP-113B.3.1A.5.1 AUDIT finalize recovery report
933591e PTP-113B.3.1A.5.1 AUDIT recovery reports
f600c31 PTP-113B.3.1A.5.1 AUDIT publish reports
d6025b6 PTP-113B.3.1A.5.0 publish trader pending files
b3f16c5 PTP-113B.3.1A add profit target v2

===== VERIFICAÇÃO DE ALTERAÇÕES EM ARQUIVOS-ALVO =====

===== RESULTADO =====
IMPLEMENT_FAIL_RECORDED
Próxima ação: corrigir o script sem conflito de aspas e reaplicar patch controlado.
